# GRAPH-XPCI

./: .gitignore  README.md  environment.yml  pyproject.toml
common/: bounding_boxes.py  classification_models.py  dataset.py  dataset3d.py  embeddings.py  ganomaly.py  itae.py  logger.py  models.py  modules.py  notify.py  preprocessing.py  record.py  trainer.py  utils.py  vae.py  visualize_utilities.py  vit.py  vit_mae.py
common/data/: 07_4001_3R1212_crop.rec.8bit.tif
common/datasets/: anomaly.py  dataset_transforms.py  single_image_classification.py
config/: ViT_MAE_fresh_patches.yml  regression_archive_resnet18.yml
notebooks/: evaluation_protocols.ipynb  generate_patches.py
training/: regression.py  regression_vit.py  regression_vitmae.py  run_mae.py  runner.py
visualization/: visualize3d.py
